--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9530,15 +9530,12 @@ a.text-dark:hover, a.text-dark:focus {
           justify-content: center;
 }
 
-@media (max-width: 1199.98px) {
+@media (max-width: 991.98px) {
   #filter {
+    position: fixed;
     top: 100px;
-  }
-}
-
-@media (min-width: 992px) {
-  #filter {
-    top: 150px;
+    right: 0;
+    left: 0;
   }
 }
 /*# sourceMappingURL=styles.css.map */
