--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,41 +5,96 @@
 }
 
 #filter {
-    z-index: 5;
+  z-index: 5;
 }
 
 #filterModal .modal-footer {
-    justify-content: center;
+  justify-content: center;
 }
 
-@include media-breakpoint-down("md") {
-  #filter {
-    position: fixed;
-    top: 100px;
-    right: 0;
-    left: 0;
+.cloth-col {
+  flex: 0 0 33%;
+  z-index: 1;
+
+  .card-img-overlay {
+    padding: 0;
+    cursor: pointer;
+    .row {
+      margin: 0;
+      position: absolute;
+      bottom: 1px;
+      width: 100%;
+
+      .card-img-overlay-info-bar {
+        padding: 10px;
+
+        i {
+          font-size: 1.33rem;
+        }
+
+        a {
+          visibility: hidden;
+        }
+      }
+
+      &:hover {
+        a {
+          visibility: visible;
+        }
+      }
+    }
+  }
+}
+
+
+@include media-breakpoint-down("sm") {
+  .cloth-col .card-img-overlay .row .card-img-overlay-info-bar {
+    i {
+      font-size: 0.875rem;
+    }
+  }
+  .cloth-row {
+    margin-top: 70px;
+    .cloth-price {
+      font-size: 0.8rem;
+    }
   }
 
-  .cloth-row {
-      margin-top: 70px;
+  .cloth-col {
+    flex: 0 0 33%;
+
+    .card-img-overlay {
+      padding: 0;
+    }
+  }
+}
+
+@include media-breakpoint-up("sm") {
+  .cloth-col .card-img-overlay .row .card-img-overlay-info-bar {
+    i {
+      font-size: 1.33rem;
+    }
   }
 }
 
 @include media-breakpoint-up("md") {
   .filter-lg-fixed-top {
-      position: fixed;
-      top: 145px; 
-      width: 72%;
-      z-index: 5;
+    position: fixed;
+    top: 145px;
+    width: 72%;
+    z-index: 5;
   }
 
-    .cloth-row {
-      margin-top: 70px;
+  .cloth-row {
+    margin-top: 70px;
   }
 }
 
-@include media-breakpoint-down("sm") {
-    .cloth-col {
-        flex: 0 0 33%;
+@include media-breakpoint-up("lg") {
+      .cloth-row {
+    margin-top: 70px;
+    .cloth-price {
+      font-size: 0.8rem;
     }
+  }
 }
